<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@android:color/black"
    >

    <Button
        android:id="@+id/button_My_Goals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/string_My_Goals" 
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
    />

    <Button
        android:id="@+id/button_Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:onClick="onClick"
        android:text="@string/string_Settings" 
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
        />
    
    <TextView
    	android:id="@+id/textview_Goals_In_Progress"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="0dp"
    	android:layout_marginTop="0dp"
    	android:text="@string/string_Goals_In_Progress"
    	android:textColor="@android:color/white"
    />

</LinearLayout>
